--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Asiah Siler</title>
 </head>
 <body>
 
-<h1>All About Asiah Siler</h1>
-<p>I am a dancer and I love math and science</p>
+<h1>All About Asiah Siler... Welcome!</h1>
+<p>My name is Asiah Siler and I am currently 16 years old. I am a rising senior at Kenwood Academy High School this upcoming fall and I enjoy dancing and playing softball in my free time.</p>
 
 </body>
 </html>
-
