--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Asiah Siler</title>
-</head>
-<body>
+<body style = "background-color:orange;">
+
 
 <h1>All About Asiah Siler... Welcome!</h1>
 <p>My name is Asiah Siler and I am currently 16 years old. I am a rising senior at Kenwood Academy High School this upcoming fall and I enjoy dancing and playing softball in my free time.</p>
